# libscip2hat

./: .gitignore  CMakeLists.txt  README  README.md
include/: CMakeLists.txt  libscip2hat.h  libscip2hat_base.h  libscip2hat_cmd.h  libscip2hat_dbuffer.h  scip2hat.h  scip2hat_base.h  scip2hat_cmd.h  scip2hat_dbuffer.h
sample/: CMakeLists.txt  test-gs.c  test-ms-callback.c  test-ms.c  test_gs  test_gs.c  test_ms  test_ms.c  test_ms_callback  test_ms_callback.c
src/: CMakeLists.txt  libscip2hat_base.c  libscip2hat_cmd.c  libscip2hat_dbuffer.c
