# ------------------------------------------------------------
#  libscip2hat include headers
#  
#  auotmatically install
#  ~/include
# ------------------------------------------------------------


# install library
install(FILES libscip2hat.h libscip2hat_base.h libscip2hat_cmd.h libscip2hat_dbuffer.h scip2hat.h scip2hat_base.h scip2hat_cmd.h scip2hat_dbuffer.h DESTINATION include)
