l# ------------------------------------------------------------
#  libscip2hat include headers
#  
#  auotmatically install
#  ~/include
# ------------------------------------------------------------


# install library
install(FILES scip2hat.h scip2hat_base.h scip2hat_cmd.h scip2hat_dbuffer.h DESTINATION include)
